--- a/requirements.txt
+++ b/requirements.txt
@@ -2,21 +2,35 @@ cachelib==0.9.0
 certifi==2022.6.15
 charset-normalizer==2.1.0
 click==8.1.3
+contourpy==1.0.5
 cs50==9.2.2
+cycler==0.11.0
 Flask==2.2.2
 Flask-Session==0.4.0
+fonttools==4.37.2
 greenlet==1.1.2
 gunicorn==20.1.0
 idna==3.3
 itsdangerous==2.1.2
 Jinja2==3.1.2
+kiwisolver==1.4.4
 MarkupSafe==2.1.1
+matplotlib==3.6.0
+multidict==6.0.2
+numpy==1.23.3
+packaging==21.3
+pandas==1.5.0
 Pillow==9.2.0
 psycopg2==2.9.3
+pyparsing==3.0.9
+python-dateutil==2.8.2
 python-dotenv==0.20.0
+pytz==2022.2.1
 requests==2.28.1
+six==1.16.0
 SQLAlchemy==1.4.40
 sqlparse==0.4.2
 termcolor==1.1.0
 urllib3==1.26.11
 Werkzeug==2.2.2
+wordcloud==1.8.2.2
