Fixed gitignore issure so that github would ignore image files which should only exist on the machine hosting the application

--- a/.gitignore
+++ b/.gitignore
@@ -133,5 +133,7 @@ flask_session
 test_data.db
 
 # image files
-*mood_images
-*word_maps
+mood_images/*
+word_maps/*
+!mood_images/.gitkeep
+!word_maps/.gitkeep
