--- a/.gitignore
+++ b/.gitignore
@@ -133,7 +133,7 @@ flask_session
 test_data.db
 
 # image files
-mood_images
-word_maps
+*mood_images
+*word_maps
 !mood_images/.gitkeep
 !word_maps/.gitkeep
