--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+attrs==22.1.0
 cachelib==0.9.0
 certifi==2022.6.15
 charset-normalizer==2.1.0
@@ -11,6 +12,7 @@ fonttools==4.37.2
 greenlet==1.1.2
 gunicorn==20.1.0
 idna==3.3
+iniconfig==1.1.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
 kiwisolver==1.4.4
@@ -21,8 +23,11 @@ numpy==1.23.3
 packaging==21.3
 pandas==1.5.0
 Pillow==9.2.0
+pluggy==1.0.0
 psycopg2==2.9.3
+py==1.11.0
 pyparsing==3.0.9
+pytest==7.1.3
 python-dateutil==2.8.2
 python-dotenv==0.20.0
 pytz==2022.2.1
@@ -31,6 +36,7 @@ six==1.16.0
 SQLAlchemy==1.4.40
 sqlparse==0.4.2
 termcolor==1.1.0
+tomli==2.0.1
 urllib3==1.26.11
 Werkzeug==2.2.2
 wordcloud==1.8.2.2
