--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 attrs==22.1.0
 cachelib==0.9.0
-certifi==2022.6.15
+certifi==2022.9.24
 charset-normalizer==2.1.0
 click==8.1.3
 commonmark==0.9.1
@@ -10,40 +10,40 @@ cycler==0.11.0
 Deprecated==1.2.13
 Flask==2.2.2
 Flask-Session==0.4.0
-fonttools==4.37.2
-greenlet==1.1.2
+fonttools==4.38.0
+greenlet==1.1.3.post0
 gunicorn==20.1.0
-idna==3.3
+idna==3.4
 iniconfig==1.1.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
 kiwisolver==1.4.4
-limits==2.7.0
+limits==2.7.1
 MarkupSafe==2.1.1
-matplotlib==3.6.0
+matplotlib==3.6.1
 multidict==6.0.2
-numpy==1.23.3
+numpy==1.23.4
 packaging==21.3
-pandas==1.5.0
+pandas==1.5.1
 Pillow==9.2.0
 pluggy==1.0.0
-psycopg2==2.9.3
+psycopg2==2.9.4
 py==1.11.0
 Pygments==2.13.0
 pyparsing==3.0.9
 pytest==7.1.3
 python-dateutil==2.8.2
-python-dotenv==0.20.0
-pytz==2022.2.1
+python-dotenv==0.21.0
+pytz==2022.5
 requests==2.28.1
-rich==12.5.1
+rich==12.6.0
 six==1.16.0
-SQLAlchemy==1.4.40
-sqlparse==0.4.2
-termcolor==1.1.0
+SQLAlchemy==1.4.42
+sqlparse==0.4.3
+termcolor==2.0.1
 tomli==2.0.1
-typing_extensions==4.3.0
-urllib3==1.26.11
+typing_extensions==4.4.0
+urllib3==1.26.12
 Werkzeug==2.2.2
 wordcloud==1.8.2.2
 wrapt==1.14.1
